# Online_store

./: .env.sample  README.md  category_data.json  data.json  groups.json  product_data.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_options.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0002_version.py  0003_alter_version_product.py  0004_alter_version_version_number.py  0005_product_owner.py  0006_alter_product_options_product_is_published.py
catalog/templates/: contacts.html
catalog/templates/catalog/: base.html  category_list.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/includes/: inc_blog.html  inc_menu.html
catalog/templates/main/: base.html  contacts.html  home.html  product_detail.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  utils.py  views.py
users/management/commands/: create_superuser.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html  password_reset.html
users/templates/users/: email_confirm.html  email_not_found.html  new_password.html  user_form.html
