[tool.poetry]
name = "pythonproject-hw-django"
version = "0.1.0"
description = ""
authors = ["Alexandra Goldobina <goldobina.s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
black = "^24.8.0"
ipython = "^8.26.0"
pytils = "^0.4.1"
crispy-bootstrap5 = "^2024.2"
django-crispy-forms = "^2.3"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^8.0.0"}
django = "4.2.2"
redis = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
